<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout_about"
    android:layout_gravity="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view_about"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:layout_weight="0"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/umBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/um_logo"
                    android:padding="15dp" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/umLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="192dp"
                            android:layout_height="128dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            android:src="@drawable/um" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:layout_marginRight="50dp"
                            android:justificationMode="inter_word"
                            android:text="@string/about_um" />

                        <Button
                            android:id="@+id/umReadBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|center_horizontal"
                            android:layout_margin="0dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:text="Read more..."
                            android:textColor="@color/black" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="30dp"
                android:layout_weight="0"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/vitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_gravity="center|center_horizontal"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/vit_logo_small" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/vitLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="192dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="5dp"
                    android:src="@drawable/vit" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:justificationMode="inter_word"
                    android:text="@string/vit_string" />

                <Button
                    android:id="@+id/vitReadBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="0dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="Read more..."
                    android:textColor="@color/black" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/ipactBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/darklogo_small"
                    android:padding="10dp"
                    android:layout_gravity="center|center_horizontal"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ipactLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:justificationMode="inter_word"
                    android:text="@string/ipact_string" />

                <Button
                    android:id="@+id/ipactReadBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_margin="0dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/read_more"
                    android:textColor="@color/black" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>